added deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,16 @@ jobs:
             - run: npm install
             - run: npm test
 
-
-      docker:
-        - image: google/cloud-sdk
-      steps:
-            - run: |
-                echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-                gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-                gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+  deploy:
+    docker:
+      - image: google/cloud-sdk
+    steps:
+        - run: |
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
 workflows:
     build-and-test:
       jobs:
         - build-and-test
+        - deploy
