--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,66 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  node: circleci/node@1.0.1
+  gcp-gke: circleci/gcp-gke@0.1.0
+  gcr: circleci/gcp-gcr@0.0.2
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
+    description: Install npm
+    # machine option runs your jobs in a dedicated, ephemeral VM that has the following specifications:
+    machine: true
     steps:
       - checkout
+      # Install node
+      - node/install
+      # Install npm
+      - node/install-npm
+      # Download and cache dependencies
       - node/with-cache:
           steps:
-            - run: npm install
-            - run: npm test
-
-  deploy:
-    docker:
-      - image: google/cloud-sdk
+            - run:
+                name: Install application dependencies
+                command: npm install
+            - run:
+                name: Run tests
+                command: npm test
+            
+          # Save cache
+          cache-key: package.json
+          # Ignore non-checksum cache hits
+          use-strict-cache: true
+  Build-Push-Image-Docker:
+    description: Build and push image to Google Container Registry
+    machine: true
     steps:
-        - run: |
-            'echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-            gcloud --quiet config set project $GOOGLE_PROJECT_ID
-            gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
+      - checkout
+      - gcr/gcr-auth
+      - gcr/build-image:
+          image: tradesman-cd-gke
+          tag: "v2" #Change version number e.g to 'v3' when updating application
+      - gcr/push-image:
+          image: tradesman-cd-gke
+          tag: "v2" #Change version number e.g to 'v3' when updating application
+    
+  deploy:
+    description: Deploy application to Google Kubernetes Engine
+    machine: true
+    steps:
+      # Install `gcloud` and `kubectl` if not already installed.
+      - gcp-gke/install
+      # Initialize the `gcloud` CLI.
+      - gcp-gke/init
+      # Update a deployment Docker image.
+      - gcp-gke/rollout-image:
+          deployment: tradesman-api-cluster
+          container: joe-wood-backend
+          image: gcr.io/tradesman-finalyear-api/tradesman-cd-gke:v2 # change version when updating
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
-    deploy:
-      jobs:
-        - deploy
+  build_update_deploy:
+    jobs:
+      - build
+      - Build-Push-Image-Docker:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - Build-Push-Image-Docker
